--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@
 version: '3.4'
 
 services:
-  # knoex:
-  #   image: knoex
-  #   build:
-  #     context: .
-  #     dockerfile: Knoex/Dockerfile
-  #   environment:
-  #       - "ConnectionStrings__PostgreSQL=Server=database; Port=5432; Database=knoex; Username=knoex; Password=knoex;"
-  #   ports:
-  #     - 5142:5142
-  #     - 7017:7017
-  #   networks:
-  #     - network
+  knoex:
+    # image: knoex
+    build:
+      context: .
+      dockerfile: Knoex/Dockerfile
+    environment:
+        - "ConnectionStrings__PostgreSQL=Host=db;Port=5432;Database=knoex;Username=knoex;Password=knoex;"
+    ports:
+      - 5142:5142
+      - 7017:7017
+    networks:
+      - network
   db:
     container_name: database
     image: postgres:alpine
